Fix screenshot functionality and added `screenshot()` function to graphics api - just adds image to end of body.  You can no longer open data urls in top level window - https://developers.google.com/web/updates/2017/03/chrome-58-deprecations#remove_content-initiated_top_frame_navigations_to_data_urls

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img id="save" src="images/save.png" class="button" alt="Save" />
 				<img id="delete" src="images/delete.png" class="button" alt="Delete" />
 				<img id="upload" src="images/upload.png" class="button" alt="Upload" />
-				<a href='#' onclick="window.open($('#canvas')[0].toDataURL())"><img class="button" src="images/snapshot.png" /></a>
+				<img id="screenshot" src="images/snapshot.png" class="button" alt="Screenshot" />
 			</div>
 			<div id="uploadPanel" style="display:none;">
 				<span id=uploadPanelLabel">Drop here to upload</span>
